--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,7 @@
     "react-scripts": "3.4.0"
   },
   "scripts": {
-    "start": "SKIP_PREFLIGHT_CHECK=true react-scripts start",
+    "start": "cross-env SKIP_PREFLIGHT_CHECK=true react-scripts start",
     "build": "SKIP_PREFLIGHT_CHECK=true react-scripts build",
     "test": "SKIP_PREFLIGHT_CHECK=true react-scripts test  --collectCoverage=true",
     "test:watch": "SKIP_PREFLIGHT_CHECK=true react-scripts test --watch  --collectCoverage=true",
@@ -33,5 +33,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5000",
+  "resolutions": {
+    "@babel/preset-env": "7.5.5"
+  }
 }
