--- a/.github/workflows/testNode.js.yml
+++ b/.github/workflows/testNode.js.yml
@@ -5,9 +5,9 @@ name: MyNode.js CI
 
 on:
   push:
-    branches: [ develop ]
+    branches: [ master,develop ]
   pull_request:
-    branches: [ develop ]
+    branches: [ master,develop ]
 
 jobs:
   build:
