--- a/.github/workflows/testNode.js.yml
+++ b/.github/workflows/testNode.js.yml
@@ -5,25 +5,32 @@ name: MyNode.js CI
 
 on:
   push:
-    branches: [ master,develop ]
+    branches: [master, develop]
   pull_request:
-    branches: [ master,develop ]
+    branches: [master, develop]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        node-version: [10.x, 12.x, 14.x]
+        node-version: [11.x, 12.x, 14.x]
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-    - run: npm ci
-    - run: npm run build --if-present
-
+      - uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: Install Frontend dependencies
+        run: npm ci
+        working-directory: client
+      - name: Install Backend & Project dependencies
+        run: npm ci
+        env:
+          DB_HOST: localhost
+          DB_NAME: foo
+          DB_USER: bar
+          DB_PASSWORD: foobar
+          JWT_SECRET: fuzz
