--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "nodemon": "^2.0.2",
     "jest": "^25.1.0",
     "supertest": "^4.0.2"
+  },
+  "resolutions": {
+    "@babel/preset-env": "7.5.5"
   }
 }
