--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,9 @@
     ]
   },
   "proxy": "http://localhost:5000",
+  "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.12.1"
+  },
   "resolutions": {
     "@babel/preset-env": "7.5.5"
   }
