--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.3",
+    "bootstrap-icons": "^1.2.2",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
@@ -23,6 +24,7 @@
     "http-proxy-middleware": "^1.0.6",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.1.0",
+    "react-icons": "^4.1.0",
     "sequelize": "^6.3.3"
   },
   "devDependencies": {
