--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "react": "^16.13.0",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^16.13.0",
+    "react-icons": "^4.1.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "2.1.8"
   },
@@ -36,8 +37,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000",
-  "resolutions": {
-    "@babel/preset-env": "7.5.5"
-  }
+  "proxy": "http://localhost:5000"
 }
