--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,9 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "2.1.8",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "cross-env SKIP_PREFLIGHT_CHECK=true react-scripts start",
