--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "http-proxy-middleware": "^1.0.6",
         "jsonwebtoken": "^8.5.1",
         "mysql": "^2.18.1",
+        "mysql2": "^2.2.5",
         "react-icons": "^4.1.0",
         "sequelize": "^6.3.3"
     },
