more media queries added

--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
     "mysql2": "^2.1.0",
+    "prop-types": "^15.7.2",
+    "react-bootstrap-sweetalert": "^5.2.0",
     "react-icons": "^4.1.0",
     "sequelize": "^6.3.3",
     "validator": "^13.5.2"
