--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^4.5.3",
     "cross-env": "^7.0.3",
     "node-sass": "4.14.1",
+    "normalize.css": "^8.0.1",
     "react": "^16.13.0",
     "react-bootstrap": "^1.4.0",
     "react-bootstrap-sweetalert": "^5.2.0",
